# huffman-file-zipper

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: README.md  index.md
docs/change-logs/: CHANGELOG-1.0.md  CHANGELOG-1.md
docs/design-specs/: design-specs-1.0.md  design-specs-1.1.md
docs/design-specs/class-diagram/v1.0/: HuffmanFileZipper-v1.0-class-diagram.simp
docs/design-specs/class-diagram/v1.1/: HuffmanFileZipper-v1.1-class-diagram.simp
docs/design-specs/wireframes/: HuffmanFileZipper-v1.0-wireframes.excalidraw
docs/design-specs/wireframes/v1.1/: HuffmanFileZipper-v1.1-wireframes.excalidraw
resources/: style_resources.qrc
resources/styles/: mainwindow_styles.qss
src/: CMakeLists.txt  main.cpp
src/file_dealer/: FileDealer.cpp  FileDealer.h
src/huffman_tree/: HuffmanNode.h  HuffmanTree.cpp  HuffmanTree.h
src/main_window/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/min_heap/: MinHeap.cpp  MinHeap.h
tests/: CMakeLists.txt  FileDealer_test.cpp  HuffmanTree_test.cpp  MinHeap_test.cpp
